# sdkman-gui-native

./: .gitignore  README.md  README_ZH.md  build.sh  index.html  package-lock.json  package.json  run-dev.sh  vite.config.ts
.ai/: INSTRUCTIONS.md  INSTRUCTIONS_ZH.md
.github/workflows/: release.yml
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  config.rs  main.rs  tray.rs
src-tauri/src/api/: client.rs  endpoints.rs  mod.rs  parser.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/local/: downloader.rs  installer.rs  mod.rs  scanner.rs  symlink.rs
src-tauri/src/models/: mod.rs  sdk.rs  sdk_version.rs  statistics.rs
src-tauri/src/utils/: mod.rs
src/components/layout/: MainLayout.vue  Sidebar.vue
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/router/: index.ts
src/stores/: installProgressStore.ts  sdkStore.ts
src/views/: Home.vue  JdkManagement.vue  SdkBrowser.vue  SdkDetail.vue  Settings.vue
